<package format="2">
  <name>apriltags_swatbotics</name>
  <version>0.1.0</version>
  <description>Swatbotics april tag library</description>
  <author>Swatbotics</author>
  <maintainer email="andre-phu-van.nguyen@polymtl.ca">Andre Phu-Van Nguyen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>

</package>
